@startuml

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}


abstract class AbstractEnemy{
    - propSpeedY:int
    - random : Random
    - propFactory : PropFactory
    # bulletStrategy : BulletStrategy
    + SupEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {abstract} getDropProb():double
    + {abstract} getPropType():int
    + dropProp():AbstractProp
}
AbstractEnemy <|-- MobEnemy

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class ElitePlusEnemy{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class EliteProEnemy{
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getDropProb():double
    + getPropType():int
}

class BossEnemy{
    + getDropProb():double
    + getPropType():int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

interface EnemyFactory{
    {abstract}createEnemy(): AbstractEnemy
}

class EliteFactory{
    + createEnemy():EliteEnemy
}
EnemyFactory <|.. EliteFactory

class ELitePlusFactory{
    + createEnemy():ElitePlusEnemy
}
EnemyFactory <|.. ELitePlusFactory

class EliteProFactory{
    + createEnemy():ElitePropFactory
}
EnemyFactory <|.. EliteProFactory

class MobFactory{
    + createEnemy():MobEnemy
}
EnemyFactory <|.. MobFactory

class BossFactory{
    + createEnemy():BossEnemy
}
EnemyFactory <|.. BossFactory

EliteEnemy <.. EliteFactory: create
ElitePlusEnemy <.. ELitePlusFactory: create
EliteProEnemy <.. EliteProFactory: create
MobEnemy <.. MobFactory: create
BossEnemy <.. BossFactory: create

AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- ElitePlusEnemy
AbstractEnemy <|-- EliteProEnemy
AbstractEnemy <|-- BossEnemy

AbstractEnemy <.. Game
MobEnemy <.. Game
EnemyFactory <.. Game
@enduml